<resources>
    <string name="app_name">Out of the nest</string>

    <!-- General -->
    <string name="btn_cancel">Cancel</string>
    <string name="btn_report">Report</string>
    <string name="txt_report">The administrator will check your report</string>

    <string name="error_unexpected">Ops! An unexpected error occurred. Please try again later.</string>
    <string name="txt_search_here">Search here...</string>
    <string name="txt_saving">Saving...</string>

    <!-- App defaults -->
    <string name="default_place_status">Closed</string>

    <!-- Welcome screen -->
    <string name="txt_first_step">Before you start, set up your family members in your profile.</string>
    <string name="bt_start">Got it, start</string>


    <!-- Permissions -->
    <string name="txt_permition_denied">Permission denied: </string>
    <string name="permission_location_denied">Please enable location permission in settings to use this feature</string>

    <!-- Navigation -->
    <string name="nav_title_maps">Maps</string>
    <string name="nav_title_events">Events</string>
    <string name="nav_title_notifications">Notifications</string>
    <string name="nav_title_profile">Profile</string>

    <!-- Home screen -->
    <string name="txt_welcome_to">WELCOME TO</string>
    <string name="btn_get_started">Get Started</string>
    <string name="btn_login">Sign in</string>

    <!-- Register and authentication screen -->
    <string name="txt_authentication_pager_desc">Authentication pages</string>
    <string name="txt_login_title">Log in to your account</string>
    <string name="txt_register_title">Create your account</string>
    <string name="txt_name">Name</string>
    <string name="txt_email">Email</string>
    <string name="txt_password">Password</string>
    <string name="txt_confirm_password">Confirm Password</string>
    <string name="btn_register">Register</string>

    <string name="success_registration">User created successfully</string>
    <string name="invalid_name">Inform a valid name</string>
    <string name="invalid_password">Inform a valid password</string>
    <string name="invalid_email">Inform a valid email</string>
    <string name="invalid_password_not_match">Passwords do not match</string>
    <string name="invalid_credential">The credentials used are incorrect</string>
    <string name="error_registration">The user could not be registered</string>
    <string name="error_login">Incorrect username or password</string>
    <string name="error_user_token">Failed to get authentication token</string>

    <!-- Maps screen -->
    <string name="txt_maps_bar_title">Places</string>
    <string name="txt_your_location">Your Location</string>
    <string name="btn_add_place">Add Place</string>
    <string name="btn_go_to_place_now">Go</string>
    <string name="btn_stop_to_place_now">Stop</string>
    <string name="error_maps_not_found">Google Maps app not found.</string>
    <string name="error_set_destination">Please select a destination first.</string>
    <string name="txt_place_now">Now:</string>

    <!-- Map Search Screen -->
    <string name="txt_event_bar_search_place">Find a place</string>
    <string name="txt_place_fetch_error">Place not found</string>

    <!-- New Place screen -->
    <string name="txt_event_bar_new_place">New Place</string>
    <string name="txt_place_name">Place Name</string>
    <string name="txt_place_type">Choose a place type</string>
    <string name="txt_place_address">Address</string>
    <string name="txt_description">Description</string>
    <string name="txt_tags">Tags</string>
    <string name="btn_save">Save</string>
    <string name="btn_use_current_location">Use Current Location</string>

    <string name="txt_address_not_found">Address not found, showing coordinates</string>
    <string name="txt_get_address_error">Error getting address, showing coordinates</string>
    <string name="txt_invalid_place_name">Please inform a name</string>
    <string name="txt_invalid_address">Please inform a valid address</string>
    <string name="txt_invalid_place_type">Please select a place type</string>
    <string name="txt_invalid_tags">Please select one or more tags</string>
    <string name="txt_place_created">Place created successfully</string>
    <string name="txt_place_creation_error">Error creating place</string>


    <!-- Places screen -->
    <string name="txt_place_detail_search_place">Place detail</string>
    <string name="txt_places_address">No address found for places</string>
    <string name="txt_tab_detail">About</string>
    <string name="txt_tab_comments">Reviews</string>
    <string name="txt_places_distance">Distance:</string>
    <string name="txt_places_time">Time</string>
    <string name="txt_places_status">Status</string>
    <string name="btn_go_to_place">Trace route</string>
    <string name="btn_add_review">Add a review</string>
    <string name="txt_find_a_place">Find a place</string>
    <string name="txt_place_not_found"></string>
    <string name="txt_distance_waiting">not found</string>

    <string name="text_place_status_open">Open</string>
    <string name="text_place_status_close_soon">Close soon</string>
    <string name="text_place_status_closed">Closed</string>

    <!-- Place review /new review -->
    <string name="txt_event_bar_review_place">Review place</string>
    <string name="txt_rating_title">Title</string>
    <string name="txt_rating_description">Description</string>
    <string name="alert_review_field_validate">Please fill all fields and provide a rating"</string>
    <string name="txt_success">Review created successfully!</string>
    <string name="btn_review">Submit review</string>
    <string name="txt_no_reviews">No reviews for this place, be the first</string>


    <!-- Events -->
    <string name="txt_event_bar_title">Events list</string>
    <string name="txt_event_detail">Event detail</string>
    <string name="txt_new_event">New Event</string>
    <string name="txt_event_bar_title_details">Event Details</string>
    <string name="txt_event_search_error">Error fetching events. Please try again.</string>
    <string name="txt_no_events_found">No events found</string>

    <string name="txt_periods_all">All</string>
    <string name="txt_periods_today">Today</string>
    <string name="txt_periods_this_week">This week</string>
    <string name="txt_periods_this_month">This month</string>

    <!-- New Event -->
    <string name="txt_new_event_title">Title</string>
    <string name="txt_new_event_date">Date</string>
    <string name="txt_new_event_description">Description</string>
    <string name="txt_new_event_address">Address</string>
    <string name="btn_new_event_save">Save event</string>
    <string name="txt_new_event_audience">Audience</string>

    <string name="txt_event_creation_error">Error creating event. Please try again.</string>
    <string name="txt_event_created">Event created successfully!</string>
    <string name="txt_invalid_event_title">Please enter a valid event title.</string>
    <string name="txt_invalid_event_description">Please enter a valid event description.</string>
    <string name="txt_invalid_event_date">Please enter a valid event date.</string>
    <string name="txt_invalid_event_audience">Please enter a valid event audience.</string>

    <!-- Notifications -->
    <string name="txt_notification_bar_title">Notifications list</string>
    <string name="txt_no_notifications">No notifications</string>
    <string name="txt_notification_deleted">Notification deleted.</string>
    <string name="error_load_notifications">Failed to load notifications</string>
    <string name="error_read_notifications">Failed to mark notification as read</string>
    <string name="error_delete_notifications">Failed to delete notification</string>

    <!-- profile screen -->
    <string name="txt_profile_bar_title">Profile</string>
    <string name="txt_username">Username</string>
    <string name="txt_family_members">Family Members</string>
    <string name="txt_token">Token</string>
    <string name="txt_error_no_name_set">No name set</string>
    <string name="txt_error_no_email_set">No email set</string>
    <string name="txt_no_token_available">No token available</string>
    <string name="txt_add_family_member">Add Family Member</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_remove">Remove</string>
    <string name="txt_dialog_title">Add Family Member</string>
    <string name="btn_family_member_dialog">Add</string>
    <string name="btn_cancel_family_member_dialog">Cancel</string>


    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- report problem -->
    <!-- report problem -->
    <string name="hint_report_problem">Describe the problem found...</string>
    <string name="title_report_problem">Report Problem</string>
    <string name="txt_report_sent_admin">Report sent! The administrator will be notified.</string>
    <string name="error_empty_report">Please describe the problem</string>
    <string name="error_send_report">Error to send report</string>

    <string name="place_type_default">Select a type...</string>

    <string-array name="list_place_types">
        <item>Select a type...</item>
        <item>Coffee shop</item>
        <item>Library</item>
        <item>Other</item>
        <item>Park</item>
        <item>Play Centre</item>
        <item>Playground</item>
        <item>Public office</item>
        <item>Public Pool</item>
        <item>Restaurant</item>
        <item>Shopping Mall</item>
        <item>Splash Pad</item>
    </string-array>

    <string-array name="list_tags">
        <item>Washroom</item>
        <item>Pet friendly</item>
        <item>Family friendly</item>
        <item>Parking</item>
        <item>Wi-fi</item>
        <item>Splash pad</item>
        <item>Playground</item>
        <item>Play area</item>
        <item>Outdoor</item>
        <item>Indoor</item>
        <item>Basketball court</item>
        <item>Picnic area</item>

    </string-array>

    <string-array name="list_target_audience">
        <!-- Age groups -->
        <item>Babies (0-2 years)</item>
        <item>Early childhood (3-5 years)</item>
        <item>Children (6-9 years)</item>
        <item>Pre-teens (10-12 years)</item>
        <item>Teenagers (13-17 years)</item>
        <item>Adults</item>
        <item>Seniors</item>
        <item>All ages</item>

        <!-- Pets -->
        <item>Pets allowed</item>
        <item>Pets not allowed</item>
        <item>Pets event</item>


        <!-- Gender -->
        <item>Boys</item>
        <item>Girls</item>
        <item>All genders</item>

        <!-- Interests -->
        <item>Arts &amp; Crafts</item>
        <item>Theater</item>
        <item>Storytelling</item>
        <item>Music</item>
        <item>Outdoor Activities</item>
        <item>Sports</item>
        <item>Games &amp; Technology</item>
        <item>Education</item>
        <item>Celebrations &amp; Parties</item>
        <item>Other</item>
    </string-array>

    <string-array name="list_family_member_types">
        <item>Father</item>
        <item>Mother</item>
        <item>Guardian</item>
        <item>Grandfather</item>
        <item>Grandmother</item>
        <item>Boy</item>
        <item>Girl</item>
        <item>Teen (Male)</item>
        <item>Teen (Female)</item>
        <item>Baby</item>
        <item>Toddler</item>
        <item>Sibling</item>
        <item>Other relative</item>
        <item>Pet</item>
    </string-array>


</resources>