<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.events.NewEventActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
  <EditText
      android:id="@+id/inp_event_title"
      android:layout_width="match_parent"
      android:layout_height="48dp"
      android:hint="@string/txt_new_event_title"
      android:autofillHints="@string/txt_new_event_title"
      android:inputType="textCapSentences" />

  <EditText
      android:id="@+id/inp_event_description"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textMultiLine"
      android:gravity="top"
      android:lines="8"
      android:maxLines="10"
      android:minLines="6"
      android:scrollbars="vertical"
      android:hint="@string/txt_rating_description"
      android:autofillHints="@string/txt_rating_description"
      />

  <EditText
      android:id="@+id/inp_event_address"
      android:layout_width="match_parent"
      android:layout_height="48dp"
      android:ems="10"
      android:inputType="textCapSentences"
      android:hint="@string/txt_new_event_address"
      android:autofillHints="postalAddress"
      />

  <EditText
      android:id="@+id/inp_event_date"
      android:layout_width="match_parent"
      android:layout_height="48dp"
      android:ems="10"
      android:inputType="textCapSentences"
      android:focusable="false"
      android:clickable="true"
      android:hint="@string/txt_new_event_date"
      />

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="2dp"
      android:text="@string/txt_new_event_audience"
      android:textStyle="bold"
      android:textSize="16sp" />

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/recycler_tags"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:clipToPadding="false"
      android:paddingStart="8dp"
      android:paddingEnd="8dp" />

  <Button
      android:id="@+id/button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/btn_new_event_save" />
</LinearLayout>
  <ProgressBar
      android:id="@+id/progressBar"
      style="?android:attr/progressBarStyleLarge"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:indeterminateTint="@color/progress_bar_color"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.499" />

</androidx.constraintlayout.widget.ConstraintLayout>