<!-- app/src/main/res/layout/card_event.xml -->
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/txvEventTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_new_event_title"
            android:textAppearance="?attr/textAppearanceHeadline6"
            style="@style/TextH2" />

        <TextView
            android:id="@+id/txvEventDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_new_event_date"
            app:drawableStartCompat="@drawable/ic_menu_event"
            app:drawableTint="@color/black"
            android:textAppearance="?attr/textAppearanceBody2"
            android:paddingTop="4dp" />

        <TextView
            android:id="@+id/txvEventDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_new_event_description"
            android:textAppearance="?attr/textAppearanceBody2"
            android:paddingTop="8dp" />

        <TextView
            android:id="@+id/txvEventAudience"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_new_event_audience"
            android:textAppearance="?attr/textAppearanceCaption"
            android:paddingTop="8dp"
            android:textColor="?android:attr/textColorSecondary" />

    </LinearLayout>
</androidx.cardview.widget.CardView>