<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/background"
    android:padding="20dp">


    <TextView
        android:id="@+id/textView2"
        style="@style/TextH2"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_login_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextEmail"
        style="@style/Email">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_email"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextPassword"
        style="@style/Password">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonLogin"
        style="@style/ButtonFullSizeFilled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_login" />

</LinearLayout>