<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/txvPlacesTitle"
        style="@style/TextH1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_places_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvPlacesTitle"
        android:src="@drawable/img_no_image" />


    <LinearLayout
        android:id="@+id/linearLayoutAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/imgAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_address" />

        <TextView
            android:id="@+id/txvAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_places_address" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayoutDistance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutAddress">
        <TextView
            android:id="@+id/txvDistance"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_places_distance" />

        <TextView
            android:id="@+id/txvTime"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_places_time"/>
        />
        <TextView
            android:id="@+id/txvStatus"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_places_status"/>
        />

    </LinearLayout>
    <TextView
        android:id="@+id/txvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutDistance" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clipToPadding="false"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvDescription"/>

    <Button
        android:id="@+id/btnGoToPlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/btn_go_to_place"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>