<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_authentication"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authentication.AuthenticationActivity">
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:background="?attr/colorPrimary"
                android:padding="20dp"
                android:id="@+id/backgroundArea">
            </FrameLayout>
            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayoutAuthentication"
                style="@style/TabMenu"
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_register" />
                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_login" />
            </com.google.android.material.tabs.TabLayout>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPagerAuthentication"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/txt_authentication_pager_desc" />
        </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>